--- a/libs/interfaces/tsconfig.lib.json
+++ b/libs/interfaces/tsconfig.lib.json
@@ -10,7 +10,7 @@
     "noFallthroughCasesInSwitch": true,
     "outDir": "../../dist/out-tsc",
     "declaration": true,
-    "types": ["node"]
+    "types": ["node"],
   },
   "files": [],
   "include": ["src/**/*.ts"],
